MineSharp 0.1.3:
 - handle SpawnLivingEntity packet
 - added Look(yaw, pitch), LookAt(position) and LookAt(block) methods to Physics plugin
 - added WorldIterator RaycastIterator
 - added Raycast() method to Physics plugin