@@ -158,9 +158,10 @@ internal static class PacketPalette
         RegisterPacket<PlaceBlockPacket>(PacketType.SB_Play_BlockPlace);
         RegisterPacket<PlayerActionPacket>(PacketType.SB_Play_BlockDig);
         RegisterPacket<SwingArmPacket>(PacketType.SB_Play_ArmAnimation);
-        RegisterPacket<InteractPacket>(PacketType.SB_Play_UseItem);
+        RegisterPacket<InteractPacket>(PacketType.SB_Play_UseEntity);
         RegisterPacket<SBCloseWindowPacket>(PacketType.SB_Play_CloseWindow);
         RegisterPacket<EntityActionPacket>(PacketType.SB_Play_EntityAction);
+        RegisterPacket<UseItemPacket>(PacketType.SB_Play_UseItem);
     }
 
     private static void RegisterPacket<TPacket>(PacketType type) where TPacket : IPacket
