@@ -3,3 +3,4 @@ MineSharp 0.1.3:
  - added Look(yaw, pitch), LookAt(position) and LookAt(block) methods to Physics plugin
  - added WorldIterator RaycastIterator
  - added Raycast() method to Physics plugin
+ - added UseItem(hand) method to Window plugin
